// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Events should get all recent events 1`] = `
Array [
  Object {
    "id": 123,
    "name": "some event",
  },
]
`;

exports[`Events should get all recent events 2`] = `
Array [
  Array [
    "EventItemOccurrences?loadAttributes=expanded&%24expand=Schedule&%24orderby=Schedule%2FEffectiveStartDate%20asc&%24filter=Schedule%2FEffectiveStartDate%20ne%20null",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should get all recent events using the plugin 1`] = `
Array [
  Object {
    "id": 123,
    "name": "some event",
  },
]
`;

exports[`Events should get all recent events using the plugin 2`] = `
Array [
  Array [
    "Apollos/GetEventItemOccurencesByCalendarId?id=1&loadAttributes=expanded&%24expand=Schedule&%24orderby=Schedule%2FEffectiveStartDate%20asc&%24filter=Schedule%2FEffectiveStartDate%20ne%20null",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should get by Campus 1`] = `
Array [
  Object {
    "id": 123,
    "name": "some event",
  },
]
`;

exports[`Events should get by Campus 2`] = `
Array [
  Array [
    "EventItemOccurrences?loadAttributes=expanded&%24expand=Schedule&%24orderby=Schedule%2FEffectiveStartDate%20asc&%24filter=%28Schedule%2FEffectiveStartDate%20ne%20null%29%20or%20%28CampusId%20eq%20456%29",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should get from id 1`] = `null`;

exports[`Events should get from id 2`] = `
Array [
  Array [
    "EventItemOccurrences?loadAttributes=expanded&%24filter=Id%20eq%20123&%24expand=Schedule&%24top=1",
    Object {},
    Object {},
  ],
]
`;

exports[`Events should return a description based on an EventItem 1`] = `
Array [
  Array [
    "EventItems/123?loadAttributes=expanded",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should return a name based on an EventItem 1`] = `
Array [
  Array [
    "EventItems/123?loadAttributes=expanded",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should return an image based on an EventItem 1`] = `
Object {
  "sources": Array [
    Object {
      "uri": "https://example.com",
    },
  ],
}
`;

exports[`Events should return an image based on an EventItem 2`] = `
Array [
  Array [
    "EventItems/123?loadAttributes=expanded",
    Object {},
    Object {
      "cacheOptions": Object {
        "ttl": 60,
      },
    },
  ],
]
`;

exports[`Events should return an image based on an EventItem 3`] = `
Array [
  Array [
    Object {
      "id": undefined,
    },
  ],
]
`;

exports[`Events should return start and end based on a schedule 1`] = `
Object {
  "end": "2013-05-01T23:00:00Z",
  "start": "2013-05-01T22:00:00Z",
}
`;
